--- a/index.html
+++ b/index.html
@@ -22,6 +22,58 @@
         </nav>
     </header>
     <main>
+        <!-- Why Web Development Section Start -->
+        <section class="why-web-development">
+            <div class="development-container">
+                <div class="development-content">
+                    <h1 class="development-title">Why Web Development??</h1>
+                    <p class="description-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ab impedit dicta ipsam quidem assumenda vero modi eligendi nesciunt. Temporibus.</p>
+                </div>
+                <div class="development-column-one">
+                    <div class="text-area">
+                        <h2>I will Do Coding and <br>
+                            Change The World</h2>
+                            <p class="description-text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, voluptas!
+                            </p>
+                            <button class="learn-more-btn">Learn More</button>
+                    </div>
+                    <div class="img-area">
+                        <img src="assets/layer.png" alt="">
+
+                    </div>
+                </div>
+                <div class="development-column-two">
+                    <div class="img-area">
+                        <img src="assets/layer-2.png" alt="">
+
+                    </div>
+                    <div class="text-area">
+                        <h2>I will help People by creating <br>
+                            Modern Web System</h2>
+                            <p class="description-text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, voluptas!
+                            </p>
+                            <button class="learn-more-btn">Learn More</button>
+                    </div>
+                </div>    
+                <div class="development-column-three">
+                    <div class="text-area">
+                        <h2>I will Do Coding and <br>
+                            Change The World</h2>
+                            <p class="description-text">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, voluptas!
+                            </p>
+                            <button class="learn-more-btn">Learn More</button>
+                    </div>
+                    <div class="img-area">
+                        <img src="assets/layer-3.png" alt="">
+
+                    </div>
+                </div>            
+            </div>
+        </section>
+        <!-- Why Web Development Section end -->
     </main>
     <footer>
     </footer>
