inspiration Section added

--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
             </div>
         </section>
         <!-- Why Web Development Section end -->
+
+        <!-- inspiration Section start -->
+        <section class="inspiration section">
+            <div class="inspiration-container">
+                <h2 class="development-title">My Inspiration</h2>
+                <p class="description-text">Every time I watch jhokar  Sir's video, I start to dream again, <br> I have been watching YouTube videos since many years, <br> But not getting the road map, but now I am getting the help of a guideline.</p>
+                <div class="inspir-video">
+                    <iframe style="border-radius: 16px;" width="1076" height="550" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=Gzqcmj82EMlMUUe3&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+        <!-- inspiration Section end -->
+         
     </main>
     <footer>
     </footer>
