--- a/index.html
+++ b/index.html
@@ -86,6 +86,22 @@
             </div>
         </section>
         <!-- inspiration Section end -->
+
+        <!-- Current Target Section start -->
+        <section class="current-target-section">
+            <div class="current-target-text-container">
+                <h1 class="development-title">My Current Target</h1>
+                <p class="description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, facilis!</p>
+
+            </div>
+            <div class="current-target-skill-container">
+                <div class="skill-item"></div>
+                <div class="skill-item"></div>
+                <div class="skill-item"></div>
+            </div>
+
+        </section>
+        <!-- Current Target Section end -->
          
     </main>
     <footer>
