--- a/index.html
+++ b/index.html
@@ -92,13 +92,28 @@
             <div class="current-target-text-container">
                 <h1 class="development-title">My Current Target</h1>
                 <p class="description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, facilis!</p>
+            </div>
+            <div class="current-target">
+                <div class="html">
+                    <img src="assets/html.png" alt="">
+                    <h3 class="">HTML</h3>
+                    <p class="description-text">HyperText Markup Language is the standard markup language for documents designed.</p>
+                    <a href="">Learn More</a>
+                </div>
+                <div class="css">
+                    <img src="assets/css.png" alt="">
+                    <h3 class="">CSS</h3>
+                    <p class="description-text">Cascading Style Sheets (CSS) is a simple mechanism for adding style to Web documents.</p>
+                    <a href="">Learn More</a>
+                </div>
+                <div class="js">
+                    <img src="assets/js.png" alt="">
+                    <h3 class="">JavaScript</h3>
+                    <p class="description-text">JavaScript, often abbreviated as JS, is a programming language and core technology of the Web.</p>
+                    <a href="">Learn More</a>
+                </div>
+            </div>
 
-            </div>
-            <div class="current-target-skill-container">
-                <div class="skill-item"></div>
-                <div class="skill-item"></div>
-                <div class="skill-item"></div>
-            </div>
 
         </section>
         <!-- Current Target Section end -->
