added support section

--- a/index.html
+++ b/index.html
@@ -113,10 +113,21 @@
                     <a href="">Learn More</a>
                 </div>
             </div>
-
-
         </section>
         <!-- Current Target Section end -->
+
+        <!-- Support Section start -->
+         <section class="support">
+            <h1>I need Support</h1>
+            <p>
+                I want my clients to give me feedback, so submit your exact feedback below
+            </p>
+            <form class="feedback-btn" action="">
+                <input type="text" placeholder="Suggest me any feedback for me">
+                <button>Submit</button>
+            </form>
+
+         </section>
          
     </main>
     <footer>
