added fotter section

--- a/index.html
+++ b/index.html
@@ -122,15 +122,30 @@
             <p>
                 I want my clients to give me feedback, so submit your exact feedback below
             </p>
-            <form class="feedback-btn" action="">
-                <input type="text" placeholder="Suggest me any feedback for me">
-                <button>Submit</button>
-            </form>
-
+            <div class="feedback-option">
+                <div class="suggest-me">
+                    <input type="text" placeholder="Suggest me any feedback for me">
+                </div>
+                <button class="sub">Submit</button>
+            </div>
          </section>
-         
+         <!-- /* support section end */ -->
     </main>
     <footer>
+        <section class="footer">
+            <div>
+                <h2>An Open Commitment by Awlad Hossain</h2>
+            </div>
+            <div class="footer-icone">
+                <a href="https://www.facebook.com/S11Ashik/" target="_blank"><img src="assets/facebook.png" alt=""></a>
+            </div>
+            <div class="footer-icone">
+                <a href="https://github.com/ashikmuhandis" target="_blank"><img src="assets/github.png" alt=""></a>
+            </div>
+            <div class="footer-icone">
+                <a href="https://bd.linkedin.com/" target="_blank"><img src="assets/linkedin-icon.png" alt=""></a>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
