added social media icone

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <img src="assets/developer.png" alt="">
                     <h1 class="hero-title">"In the Near future, I hope to <br> become a Developer."</h1>
                     <p class="description-text">Lorem, ipsum dolor sit Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aperiam perspiciatis sapiente omnis cumque impedit laborum. amet consectetur adipisicing elit. Facilis, quis.</p>
-                    <a href=""><button class="bontact-btn">Contact with me</button></a>
+                    <a href="#footer"><button class="bontact-btn">Contact with me</button></a>
                 </div>
             </div>
             <!-- Hero/banner section end -->
@@ -132,9 +132,10 @@
          <!-- /* support section end */ -->
     </main>
     <footer>
+        <!-- footer Section start -->
         <section class="footer">
             <div>
-                <h2>An Open Commitment by Awlad Hossain</h2>
+                <h3>An Open Commitment by Awlad Hossain</h3>
             </div>
             <div class="footer-icone">
                 <a href="https://www.facebook.com/S11Ashik/" target="_blank"><img src="assets/facebook.png" alt=""></a>
@@ -146,6 +147,7 @@
                 <a href="https://bd.linkedin.com/" target="_blank"><img src="assets/linkedin-icon.png" alt=""></a>
             </div>
         </section>
+        <!-- footer Section end -->
     </footer>
 </body>
 </html>
