--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="text-content">
                     <img src="assets/developer.png" alt="">
                     <h1 class="hero-title">"In the Near future, I hope to <br> become a Developer."</h1>
-                    <p class="description-text">Lorem, ipsum dolor sit Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aperiam perspiciatis sapiente omnis cumque impedit laborum. amet consectetur adipisicing elit. Facilis, quis.</p>
+                    <p class="description-text">According to the Bureau of Labor Statistics, employment for web developers is projected to grow 16% between 2022-2032.</p>
                     <a href="#footer"><button class="bontact-btn">Contact with me</button></a>
                 </div>
             </div>
@@ -27,7 +27,7 @@
             <div class="development-container">
                 <div class="development-content">
                     <h1 class="development-title">Why Web Development??</h1>
-                    <p class="description-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ab impedit dicta ipsam quidem assumenda vero modi eligendi nesciunt. Temporibus.</p>
+                    <p class="description-text">Web developers provide businesses with the unique, engaging websites they need to connect with customers.</p>
                 </div>
                 <div class="development-column-one">
                     <div class="text-area">
@@ -91,7 +91,7 @@
         <section class="current-target-section">
             <div class="current-target-text-container">
                 <h1 class="development-title">My Current Target</h1>
-                <p class="description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, facilis!</p>
+                <p class="description-text">now i learn html or css future i i learn js</p>
             </div>
             <div class="current-target">
                 <div class="html">
